# splitAndGetLabel

./: CMakeLists.txt  README.md  execJulius.cpp  main.cpp  recordAndSplit.cpp
